@@ -1,3 +1,11 @@
+2015-01-06 Martin Grønholdt
+
+* user/handlers/http/fs/http-fs.c: Add missing header.
+* user/handlers/http/websocket/websocket.c (http_ws_sent_cb): Remove uneeded var.
+* user/handlers/websocket/wifiswitch.c: Add ws_wifiswitch_send_gpio_status to send GPIO status.
+* user/include/handlers/websocket/wifiswitch.h: Longer timeout now that close seems to work.
+* user/user_main.c (button_switch): Send GPIO status using WebSocket.
+
 2015-01-05 Martin Grønholdt
 
 * fs/root_src/css/custom.css: Added connection status rules
